# kmcmake

./: .gitignore  .kmdopkg.yaml  1  CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  CMakeLists.txt.in  PROJECT_STATUS.md  README.md  README_CN.md  doc.md  go.mod
.github/workflows/: ci.yml  windows.yml
changeme/: main.cc.in
example/: README.md  run_usage_demo.sh
example/.work/consumer/: CMakeLists.txt  main.cc
example/.work/kmcmake_example_demo/: .gitignore  CMakeLists.txt  README.md  README_CN.md
example/.work/kmcmake_example_demo/examples/: foo_ex.cc
example/.work/kmcmake_example_demo/kmcmake_example_demo/: foo.cc
example/.work/kmcmake_example_demo/tests/: foo_test.cc
example/.work/kmcmake_example_demo_install/include/kmcmake_example_demo/: version.h
example/.work/kmcmake_example_demo_install/lib/cmake/kmcmake_example_demo/: kmcmake_example_demoConfig.cmake  kmcmake_example_demoTargets-release.cmake  kmcmake_example_demoTargets.cmake
example/.work/kmcmake_example_demo_install/lib/pkgconfig/: kmcmake_example_demo.pc
example/.work/template_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  setup.py
example/.work/template_build/kmcmake_example_demo/: main.cc
example/.work/template_build/tests/: foo_doctest.cc
template/: CMakeLists.txt  CMakeLists.txt.in  README.md  README.md.in  README_CN.md.in  in.gitignore  setup.py.in
template/changeme/: CMakeLists.txt  foo.cc.in  main.cc.in  skills.h.in
template/cmake/: changeme_deps.cmake
template/examples/: foo_ex.cc.in
template/kmcmake/: kmcmake_module.cmake
template/kmcmake/arch/arm/: kmcmake_arch_detect.cmake
template/kmcmake/tools/: kmcmake_ar_shared.cmake  kmcmake_cc_binary.cmake  kmcmake_cc_library.cmake  kmcmake_compiler_flags.cmake
template/tests/: CMakeLists.txt  foo_doctest.cc.in  foo_test.cc.in
test/: README.md  run_template_regression.sh
test/.work/consumer/: CMakeLists.txt  main.cc
test/.work/kmcmake_demo/: .gitignore  CMakeLists.txt  README.md  setup.py
test/.work/kmcmake_demo/examples/: foo_ex.cc
test/.work/kmcmake_demo/kmcmake_demo/: main.cc
test/.work/kmcmake_demo/tests/: foo_test.cc
test/.work/kmcmake_demo_install/include/kmcmake_demo/: version.h
test/.work/simd_AVX2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
test/.work/simd_AVX2/kmcmake_demo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/.work/simd_AVX2/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/.work/simd_AVX512/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
test/.work/simd_AVX512/kmcmake_demo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/.work/simd_AVX512/package/: kmcmake_demo.pc
test/.work/simd_AVX512/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/.work/simd_NONE/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
test/.work/simd_NONE/kmcmake_demo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/.work/simd_NONE/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/.work/template_build/: CMakeCache.txt  Makefile  README.md  README_CN.md  cmake_install.cmake  install_manifest.txt
test/.work/template_build/kmcmake_demo/: foo.cc
test/.work/template_build/tests/: foo_doctest.cc
website/: README.md  docusaurus.config.js  package-lock.json  sidebars.js
website/blog/: 2025-08-01-mdx-blog-post.mdx  2026-04-07-kmcmake-v1-upgrade-summary.mdx  authors.yml  tags.yml
website/docs/: binary.mdx  gen.mdx  interface.mdx  intro.md  library.mdx
website/docs/advance/: cmake.mdx  dependencies.mdx  export.mdx  flags.mdx  generated-version.mdx  preset.mdx
website/docs/reference/: cc_benchmark.mdx  cc_binary.mdx  cc_lib.mdx  cc_proto.mdx  cc_test.mdx
website/i18n/zh-cn/docusaurus-plugin-content-blog/: 2025-08-01-mdx-blog-post.mdx  options.json
website/i18n/zh-cn/docusaurus-plugin-content-docs/: current.json
website/i18n/zh-cn/docusaurus-plugin-content-docs/current/: binary.mdx  gen.mdx  interface.mdx  intro.md  library.mdx
website/i18n/zh-cn/docusaurus-plugin-content-docs/current/advance/: cmake.mdx  dependencies.mdx  export.mdx  flags.mdx  generated-version.mdx  preset.mdx
website/i18n/zh-cn/docusaurus-plugin-content-docs/current/reference/: cc_benchmark.mdx  cc_binary.mdx  cc_lib.mdx  cc_proto.mdx  cc_test.mdx
website/i18n/zh-cn/docusaurus-plugin-content-docs/current/tutorial-basics/: congratulations.md
website/i18n/zh-cn/docusaurus-theme-classic/: footer.json  navbar.json
website/src/components/HomepageFeatures/: index.js
